2008-04-27 Marc Noirot <marc.noirot@gmail.com>
	* amf.h, amf.c (amf_str): Transformed the macro into a function for better
	  type safety and arguments sanity checks.

	* amf.c: Fixed AMF string initialization bugs.

	* check_amf.c: Added tests for AMF numbers, booleans and strings.

	* configure.ac, tests/Makefile.am: Added tests if the machine has
	  check (http://check.sourceforge.net/) installed.

2008-03-24 Marc Noirot <marc.noirot@gmail.com>
	* amf.h, amf.c: Added support for the AMF NULL value type.

	* flvmeta.c (compute_vp6_size, compute_vp6_alpha_size): Fixed
	  a video size computation bug for the VP60 profile, reported
	  by zouguangxian@gmail.com.

	* msvc/config.h: Removed automatic generation of config.h and
	  added it as a simple static file in Windows.

	* flvmeta.c: Added -C, -a, and -p command line options.

2008-02-17 Marc Noirot <marc.noirot@gmail.com>
	* amf.c, amf.h, flvmeta.c: Cleaned up the AMF serializer/deserializer by
	  using a callback-based mechanism to make the code backend-independant.

2008-01-03 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (get_flv_info, write_flv): Data tags occuring before the first
	  audio or video tag were not written into the output file.
	
	* all source files: Fixed copyright strings.

	* flvmeta.c (compute_metadata): Fixed a date bug where the
	  daylight static variable obtained from tzset() was used
	  to compute UTC times.

2007-10-28 Marc Noirot <marc.noirot@gmail.com>
	* Added getopt_long support for the Windows build.
	* Removed the flvdump program. Its functionality
	  will be part of flvmeta.

2007-10-11 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (inject_metadata, write_flv): Do not use
	  memory mapping to write the output file.

2007-10-10 Marc Noirot <marc.noirot@gmail.com>
	* types.h, types.c: Transformed most conversion functions
	  into macros, to improve execution speed.

2007-10-07 Marc Noirot <marc.noirot@gmail.com>
	* amf.c (amf_data_decode, amf_data_encode):